--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="https://www.osboha180.com/rack/bookSearch?type=1">BOOKS</a></li>
                     <li><a href="https://www.osboha180.com/rack/Article">ARTICLES</a></li>
                     <li><a href="https://www.osboha180.com/rack/Activities">ACHIEVEMENTS</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="https://www.facebook.com/osboha180/">CONTACT</a></li>
                 </ul>
             </div>
 
